display logged in user name

--- a/SpringLoginAngular/ArchApp/src/main/webapp/index.html
+++ b/SpringLoginAngular/ArchApp/src/main/webapp/index.html
@@ -9,7 +9,7 @@
 
 <body ng-controller="MainCtrl">
 <h3>Welcome</h3>
-<p>Welcome user</p>
+<p>Welcome {{ user.name }}</p>
 <a href="j_spring_security_logout">Logout</a>
 
 <!-- Vendor Lib -->
