add ng-cloak to prevent ui flashing

--- a/SpringLoginAngular/ArchApp/src/main/webapp/index.html
+++ b/SpringLoginAngular/ArchApp/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 <meta name="author" content="Daniela Baron">
 </head>
 
-<body ng-controller="MainCtrl">
+<body ng-cloak ng-controller="MainCtrl">
 <h3>Welcome</h3>
 <p>Welcome {{ user.name }}</p>
 <a href="j_spring_security_logout">Logout</a>
